Add new sections to java.md